# HT_20_2

./: catalog.json  category.json  product.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py
catalog/templates/catalog/: home.html  product_confirm_delete.html  product_detail.html  product_details.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
main/templates/main/: index.html
